syntax = "proto3";

package Pro;

option java_package = "com.fsgame.proto";
option java_outer_classname = "MSGHeatALiveS2C";

//心跳包  发送时间
message HeatALiveS2C {
	float time = 1;
}